Fix dropdown spacing issues.

--- a/home-fix.css
+++ b/home-fix.css
@@ -18,7 +18,7 @@
 		padding-top: 0px;
 	}
 	#dropdown01 {
-		margin-left: 25px;
+		padding-top: 0px;
 	}
 }
 
